# ForeFathers-DApp

./: crew.py  requirements.txt  upload_brain.py  worker.js  wrangler.toml
forefathers_brain/: C:UsersGabrielDownloadsForeFathers-DAppstart_weberdy.bat  README.md  check.py  pyproject.toml  split_brain.py
forefathers_brain/knowledge/: brain_0.json  brain_1.json  brain_10.json  brain_11.json  brain_12.json  brain_2.json  brain_3.json  brain_4.json  brain_5.json  brain_6.json  brain_7.json  brain_8.json  brain_9.json
