[project]
name = "forefathers_brain"
version = "0.1.0"
description = "forefathers_brain using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.10.0"
]

[project.scripts]
forefathers_brain = "forefathers_brain.main:run"
run_crew = "forefathers_brain.main:run"
train = "forefathers_brain.main:train"
replay = "forefathers_brain.main:replay"
test = "forefathers_brain.main:test"
run_with_trigger = "forefathers_brain.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
